# mini-blockchain

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/block/: Cargo.toml
src/block/src/: block_builder.rs  lib.rs  simple.rs
src/chain/: Cargo.toml
src/chain/src/: in_memory.rs  lib.rs
src/collator/: Cargo.toml
src/collator/src/: default.rs  lib.rs  traits.rs  worker.rs
src/common/: Cargo.toml
src/common/src/: crypto.rs  error.rs  hash.rs  helper.rs  lib.rs  num.rs  serialization.rs  uint.rs
src/common/src/crypto/: ecdh.rs  ecies.rs  keypair.rs  mod.rs
src/consensus/: Cargo.toml
src/consensus/src/: lib.rs  pow.rs
src/ethjson/: Cargo.toml
src/ethjson/src/: lib.rs  uint.rs
src/ethjson/src/blockchain/: account.rs  blockchain.rs  header.rs  mod.rs  state.rs  transaction.rs
src/ethjson/src/local_tests/: mod.rs
src/ethjson/src/spec/: account.rs  clique.rs  engine.rs  ethash.rs  genesis.rs  mod.rs  null_engine.rs  seal.rs  spec.rs  state.rs  step_duration.rs
src/ethjson/src/state/: log.rs  state.rs  test.rs  transaction.rs
src/ethjson/src/test/: mod.rs
src/ethjson/src/transaction/: mod.rs  transaction.rs  txtest.rs
src/ethjson/src/trie/: test.rs
src/ethjson/src/vm/: call.rs  env.rs  transaction.rs
src/ethvm/: Cargo.toml  README.md
src/ethvm/src/: cache.rs  cost.rs  error.rs  gas.rs  instructions.rs  interpreter.rs  lib.rs  memory.rs  stack.rs
src/ethvm/src/types/: action_params.rs  call_type.rs  env_info.rs  ext.rs  mod.rs  schedule.rs  tests.rs
src/evm/: Cargo.toml  README.md
src/evm/src/: evm.rs  lib.rs
src/evm/src/interpreter/: gas.rs  memory.rs  mod.rs
src/kv-storage/: Cargo.toml
src/kv-storage/src/: lib.rs  memory.rs  traits.rs
src/p2p/: Cargo.toml  README.md
src/p2p/src/: config.rs  connection.rs  db.rs  discovery.rs  error.rs  handshake.rs  host.rs  lib.rs  node.rs  node_table.rs  peer.rs  protocol.rs  sample.rs  service.rs
src/p2p/src/enode/: db.rs  local_node.rs  mod.rs  node.rs  url_v4.rs
src/p2p/src/nat/: mod.rs  nat.rs
src/primitives/: Cargo.toml
src/primitives/src/: lib.rs
src/rlp/: Cargo.toml
src/rlp/src/: error.rs  impls.rs  lib.rs  rlp.rs  rlpin.rs  traits.rs
src/runtime/io/: Cargo.toml
src/runtime/io/src/: error.rs  handler.rs  lib.rs  service.rs  worker.rs
src/serialize-json/: Cargo.toml
src/serialize-json/src/: hash.rs  maybe.rs
src/serialize-json/src/blockchain/: block.rs  test.rs
src/serialize-json/src/spec/: authority_round.rs  basic_authority.rs  builtin.rs  instant_seal.rs  params.rs  validator_set.rs
src/serialize-json/src/state/: mod.rs
src/serialize-json/src/transaction/: test.rs
src/serialize-json/src/trie/: input.rs  mod.rs  trie.rs
src/serialize-json/src/vm/: mod.rs  test.rs  vm.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs
src/transaction/: Cargo.toml
src/transaction/src/: lib.rs  mocked.rs
src/trie/: Cargo.toml  README.md
src/trie/src/: encoding.rs  error.rs  hasher.rs  lib.rs  node.rs  storage.rs  trie.rs
src/virtual-machine/evm/: Cargo.toml
src/virtual-machine/evm/src/: lib.rs
src/virtual-machine/evm/src/interpreter/: memory.rs  stack.rs
src/virtual-machine/vm/: Cargo.toml
src/virtual-machine/vm/src/: lib.rs
src/vm/: Cargo.toml
src/vm/src/: access_list.rs  env_info.rs  error.rs  ext.rs  lib.rs  return_data.rs  tests.rs
