[package]
name = "collator"
version = "0.1.0"
authors = ["willesxm <willeslau@gmail.com>"]
edition = "2018"
description = "Collates transactions into the corresponding queues"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }

transaction = { path = "../transaction", version = "0.1.0" }
block = { path = "../block", version = "0.1.0" }
