[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["serde/std", "bincode"]

[dependencies]
serde = { version = "1.0.132", optional = true, features = ["derive"] }
bincode = { version = "1.3.3", optional = true }

tiny-keccak = { version = "2.0.2", features = ["keccak"] }
