[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "rand"]
std = ["serde/std", "bincode"]
rand = ["secp256k1/rand-std"]

[dependencies]
serde = { version = "1.0.132", optional = true, features = ["derive"] }
bincode = { version = "1.3.3", optional = true }
secp256k1 = { version = "0.21.2", optional = true }
zeroize = "1.4.3"
lazy_static = "1.4.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
