[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
serialize = []
std = ["uint/std", "serde/std", "bincode", "secp256k1/recovery", "serialize"]

[dependencies]
rlp = { path = "../rlp" }
aes = { version = "0.7.5", features = ["ctr"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }
bincode = { version = "1.3.3", optional = true }
secp256k1 = { version = "0.21.2", features = ["recovery", "rand-std"] }
zeroize = "1.4.3"
lazy_static = "1.4.0"
hex = "0.4"
sha2 = "0.10.1"
sha3 = "0.10.0"
hmac = "0.12.0"
rand = "0.8.4"
fixed-hash = "0.7.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
uint = { version = "0.8.3", default-features = false }
