[package]
name = "ethvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
lazy_static = "1.0"

[dev-dependencies]
rustc-hex = "2.1.0"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true