[package]
name = "ethvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
lazy_static = "1.0"
rlp = { path = "../rlp" }
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
rustc-hex = "2.1.0"
