[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
vm = { path = "../vm" }
lazy_static = "1.0"

[profile.dev]
debug = true

[profile.test]
debug = true