[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
common = { path = "../common" }
kv-storage = { path = "../kv-storage" }

[dev-dependencies]
secp256k1 = { version = "0.21.2" }
hex = "0.4.3"