[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.9", features = ["full"] }
bytes = "1"
common = { path = "../common" }
kv-storage = { path = "../kv-storage" }

[dev-dependencies]
secp256k1 = { version = "0.21.2" }
hex = "0.4.3"
log = "0.4.14"