[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.9", features = ["full"] }
bytes = "1"
common = { path = "../common" }
kv-storage = { path = "../kv-storage" }
rlp = { path = "../rlp" }
rand = "0.8.4"
#lru = "0.7.2"
futures = "0.3.19"

[dev-dependencies]
secp256k1 = { version = "0.21.2" }
hex = "0.4.3"
log = "0.4.14"