[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
futures = "0.3.19"
crossbeam-deque = "0.8.1"
log = "0.4.14"
slab = "0.4.5"

common = { path = "../../common" }